--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,6 @@ section {
     float: left;
     width: 40%;
     margin-left: 5%;
-    padding-left: 2%;
 }
 
 .half-width img {
@@ -66,4 +65,34 @@ section {
     padding-top: 100px;
     font-size: 50px;
     color: #707070;
+}
+
+.reci-head {
+    margin-top: 50px;
+    text-align: center;
+    font-size: 50px;
+    color: #676767;
+}
+
+.reci-descrip {
+    font-size: 20px;
+    margin: 0 210px;
+    text-align: center;
+    margin-bottom: 50px;
+}
+
+.sub-title {
+    font-size: 25px;
+    font-weight: 900;
+}
+
+#recipies {
+    box-shadow: 0px 0px 35px -10px #616161;
+    padding: 20px;
+    border-radius: 25px;
+    height: 75%;
+}
+
+.reci-image {
+    height: 60%;
 }
