--- a/css/style.css
+++ b/css/style.css
@@ -79,6 +79,7 @@ section {
     margin: 0 210px;
     text-align: center;
     margin-bottom: 50px;
+    color: #676767;
 }
 
 .sub-title {
@@ -95,4 +96,37 @@ section {
 
 .reci-image {
     height: 60%;
+}
+
+.yt-insta-dribble {
+    float: left;
+    margin-left: 15%;
+    margin-top: 50px;
+    text-align: center;
+}
+
+.follow-us {
+    height: 200px;
+    box-shadow: 0px 0px 20px #676767;
+    margin: 200px 70px;
+    border-radius: 15px;
+    color: #616161;
+}
+
+.footer {
+    height: 200px;
+    background-color: #0B0D17;
+}
+
+.footer h1 {
+    text-align: center;
+    font-size: 50px;
+    color: #616161;
+    padding-top: 20px;
+}
+
+.footer h3 {
+    text-align: center;
+    font-size: 20px;
+    color: #fff;
 }
